fix: Add gap for each listItem

--- a/src/ListProducts/ListProducts.module.css
+++ b/src/ListProducts/ListProducts.module.css
@@ -4,4 +4,5 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
+  gap: 12px;
 }
